--- a/mars_golden_record/main.ipynb
+++ b/mars_golden_record/main.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from libneo import eqdsk_base"
@@ -17,8 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equil_create = eqdsk_base.read_eqdsk('RUN/CHEASE/EXPEQ')\n",
-    "equil_chease = eqdsk_base.read_eqdsk('RUN/CHEASE/EQDSK_COCOS_02.OUT')"
+    "# get environment variable DATA for Path\n",
+    "datapath = Path(os.path.expandvars(\"$DATA\"))\n",
+    "equil_create_path = (datapath / \"DEMO/EQDSK/Equilibrium_DEMO2019_CHEASE\" /\n",
+    "    \"MOD_Qprof_Test/EQDSK_DEMO2019_q1_COCOS_02.OUT\")\n",
+    "\n",
+    "\n",
+    "equil_ref = eqdsk_base.read_eqdsk(equil_create_path)\n",
+    "equil_new = eqdsk_base.read_eqdsk('RUN/CHEASE/EQDSK_COCOS_02.OUT')"
    ]
   },
   {
@@ -27,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqdsk_base.plot_poloidal_flux([equil_create, equil_chease], [\"CREATE\", \"CHEASE\"])"
+    "eqdsk_base.plot_poloidal_flux([equil_ref, equil_new], [\"REFERENCE\", \"NEW\"])"
    ]
   },
   {
@@ -36,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqdsk_base.plot_fpol([equil_create, equil_chease], [\"CREATE\", \"CHEASE\"])"
+    "eqdsk_base.plot_fpol([equil_ref, equil_new], [\"REFERENCE\", \"NEW\"])"
    ]
   },
   {
@@ -47,16 +55,9 @@
    "source": [
     "plt.figure()\n",
     "\n",
-    "plt.plot(equil_create['s_pol'], equil_create['qprof'])\n",
-    "plt.plot(equil_chease['s_pol'], equil_chease['qprof'], \"--\")"
+    "plt.plot(equil_ref['s_pol'], equil_ref['qprof'])\n",
+    "plt.plot(equil_ref['s_pol'], equil_new['qprof'], \"--\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -75,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
